Automating-Infra-IAC/internet_gateway.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.tags,
    { Name = format("%s-%s!", aws_vpc.main.id, "IG") }
  )
}
